Fix issue where whitespace in RTL text in user title would cause a new line.

--- a/_style.scss
+++ b/_style.scss
@@ -1808,7 +1808,7 @@ a[href^='alltorrents.php?action=history&userid='] {
     font-size: 1.1em !important;
     padding: 0px !important;
     line-height: 0.9em;
-    float: none;
+    float: none !important;
 }
 
 .post_id {
